--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-﻿name: Build on macOS
+﻿name: Build
 
 on: [workflow_dispatch]
 
@@ -7,11 +7,12 @@ jobs:
 
         strategy:
             matrix:
-                python-version: [3.9, "3.10"]
-                # "3.10" must be in quotes so YAML won't think it's 3.1.
+                os: [windows-latest, ubuntu-latest, macos-latest]
+                python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
+                # "3.10" must be in quotes so it's not interpreted as "3.1".
                 # See: https://dev.to/hugovk/the-python-3-1-problem-85g
 
-        runs-on: macos-latest
+        runs-on: ${{ matrix.os }}
 
         steps:
             - name: Check out code.
