--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,29 +7,27 @@ jobs:
         strategy:
             matrix:
                 os: [windows-latest, ubuntu-latest, macos-10.15]
-                python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
-                # "3.10" must be in quotes so it's not interpreted as "3.1".
-                # See: https://dev.to/hugovk/the-python-3-1-problem-85g
+                python-version: ["3.7", "3.8", "3.9", "3.10"]
 
         runs-on: ${{ matrix.os }}
 
         steps:
           - name: Check out code.
-            uses: actions/checkout@v2
+            uses: actions/checkout@v3
 
           - name: Set up Python ${{ matrix.python-version }}.
-            uses: actions/setup-python@v2
+            uses: actions/setup-python@v4
             with:
                 python-version: ${{ matrix.python-version }}
 
           - name: Install dependencies.
-            run: pip install wheel
+            run:  pip install wheel
 
           - name: Build wheel.
-            run: pip wheel .
+            run:  pip wheel .
 
           - name: Upload wheel.
-            uses: actions/upload-artifact@v2
+            uses: actions/upload-artifact@v3
             with:
               name: wheels
               path: JPype1-*.whl
